# KafkaProject

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/kafkaproject/: consumer1.py  consumer2.py  producer.py
